--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -391,8 +391,9 @@ summary(fit)
 ### エピソード、用語集、Rスクリプト
 
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
-- [P-Value Explanations That Seem Plausible at First Glance](frequentist-2.html)
+- [P-Value Explanations That Seem Plausible at First Glance]
 - [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
+- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks]
 - [Understanding Confidence Intervals via Hypothetical Replications in R]
 - [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
 
