--- a/jp/truth-3.qmd
+++ b/jp/truth-3.qmd
@@ -158,6 +158,7 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 
 ### 研究仮説を言葉にするということ
 
+::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
 お父さん「はい、コーヒーのおかわり。ミルクはいる？」
 ::: 
@@ -183,16 +184,14 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
-### This concludes the episode on Truth. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
-
-### エピソード
+### This concludes the Truth series. If you’d like to keep reading over your next cup of coffee, further episodes are waiting:
 
 - [Three-Variable DAGs: The Smallest Building Blocks of Causal Structure](causal-inference-1.html)
 - [Common Causes and Confounders](causal-inference-2.html)
 - [DAGs and Conditional Distributions: Two Languages for the Same Structure](causal-inference-3.html)
 - [Backdoor Paths and Confounders](causal-inference-4.html)
 
-### To clarify which conceptual layers the issues in this episode belong to, it may help to revisit the previous series:
+### To clarify which conceptual layers the issues in the series belong to, it may help to revisit the previous series:
 
 **1. Study design — 研究の出発点**
 
@@ -230,3 +229,9 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 - [Where My Logistic Regression Went Wrong](logistic-regression-3.html)
 - [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
 - [Simpson's paradox](logistic-regression-5.html)
+
+**6. Truth — 真実**
+
+- [What Data Cannot Tell Us](truth-1.html)
+- [What Could Have Happened](truth-2.html)
+- [What Is It That You Want to Know?](truth-3.html)
