--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size"
+title: "Understanding Confidence Intervals via Hypothetical Replications in R"
 format:
   html:
     toc: true
@@ -148,331 +148,355 @@ a:hover {
 ![](../image/father-daughter.png){.hero-header-img}
 :::
 
-# Frequentist Thinking V − Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size
+# Frequentist Experiments II − Understanding Confidence Intervals via Hypothetical Replications in R
 
 ::: {.serif-block .text-right}
-Keywords: probability model, p-value, simulation, study design, survival/competing-risk
+Keywords: probability model, simulation, study design, survival/competing-risk
 :::
 
 ------------------------------------------------------------------------
 
-### あれ？何人に調査すればいいんだろう
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「ちょっといいかな」
-:::
-
-::: voice-daughter
-私「なに？お父さん、たばこくわえながら真面目な顔して」
-:::
-
-::: voice-father
-お父さん「サンプルサイズって計算した？」
-:::
-
-::: voice-daughter
-私「サンプルサイズってなんのこと？」
-:::
-
-::: voice-father
-お父さん「ほら、がんサバイバーの調査するんでしょ。その人数のこと」
-:::
-
-::: voice-daughter
-私「ああ、あれね。100人に調査するつもりだよ」
-:::
-
-::: voice-father
-お父さん「この前は話が中途半端だったでしょ。続きを説明したくて。前回は“精度”の話。今日は“差を見つけたいとき”の話」
-:::
-
-::: voice-daughter
-私「ん、わかった。サンプルサイズの話の続きね。なになに」
-:::
-
-::: voice-father
-お父さん「前回は信頼区間とサンプルサイズだったよね。でも、もしストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究をしたいなら、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
-:::
-
-::: voice-daughter
-私「仮説検定って**p値**のこと？」
-:::
-
-::: voice-father
-お父さん「そうそう。そっちの話をするなら、p値と**αエラー**・**βエラー**の関係を説明しないとだな。この前、JCOG9502の論文もってきたとき、どこまで話したっけ？」
-:::
-
-::: voice-daughter
-私「p値とかASA声明については聞いたよね。でも、エラーって言葉はでてこなかったな」
-:::
-
-::: voice-father
-お父さん「じゃあ、話はそこからだね。ちょっとそこのナプキンとペンをとって」
-:::
-
-::: voice-daughter
-私「ん？これのこと？」
-:::
-
-::: voice-father
-お父さん「ありがとう。αエラー・βエラーは、表にしないと説明できないからね」
-:::
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note appearance="simple"  title="αエラーとβエラー"}
-
-これまで、臨床試験JCOG9502（Sasako, et al. 2006）の文脈に沿って、片側p値と両側p値の違いも交えながら、p値について解説してきました。しかし本質的に重要なのは、p値を用いた判断に、どのような合理性があるのか、ということです。
-
-JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果もp\<0.05とp≥0.05の2通りです。これらを組み合わせは2×2の4通りがあります。
-
-このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを**検出力（power）**と呼んでいます。
-
-| 研究結果 | 真に効果がない（帰無仮説） | 真に効果がある（対立仮説） |
-|----|----|----|
-| 有意差なし（p値≥有意水準） |  | βエラー |
-| 有意差あり（p値\<有意水準） | αエラー | 検出力=1-β |
-:::
+### お父さん、その95%信頼区間って本当に95%なの？
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「まあ当たり前だよね。左開胸開腹連続切開をしたLTA群で予後がよくならないのに、有意に効いたって判断したら間違いだし、逆にいい術式なのに、結果的に有意にならなかったらそれも研究失敗だし」
+私「あのさ、もうひとつ聞きたいと思っていたことがあって。**95%信頼区間（confidence interval）**って、みんな当たり前のようにいうけど、ほんとに95%も当たってるの？」
 :::
 
 ::: voice-father
-お父さん「そうだね。でも、正確にいうと、αエラー・βエラーは"統計学的に有意"とかp値とかとは、直接関係する概念じゃない。別に、効果があるかどうか判定する基準は、p値じゃなくてもいいわけだからね。ポイントはね、
-
-> p\<0.05は、αエラーだけを制御する基準
-
-だってこと」
-:::
-:::::::::::::::::::::::::::::::::
-
-::: {.callout-note appearance="simple"  title="αエラー、βエラー、p値"}
-
-αエラーとβエラーが生じる確率を考えてみましょう。理論的に考えると、サンプルサイズが大きくなるほど、ランダム誤差は小さくなります。αエラーとβエラーも同じで、サンプルサイズが大きいほど小さくなる（判断を誤りにくくなる）性質があります。しかし、2つのエラーはトレードオフの関係にあります。サンプルサイズが一定だと、両方同時に小さくすることはできません。そこで通常は、αエラーを優先して、事前に決めた水準よりも小さく保たれるような判定方式を用います。これが仮説検定であり、事前に決めた水準のことを有意水準と呼びます。実は、p\<0.05で判定することと有意水準を5%と設定することは、同じ意味です。
-
-ややこしいのですが、JCOG9502では症例登録に予定より時間がかかったため、有意水準10%、つまり全生存期間の片側p値を0.1と比べる方式が採用されました。この方式では、LTAに延命効果がなくても、100回に10回はαエラーが生じてしまい、LTAが有効と判定してしまうことになります。つまり、有意水準が5%から10%に高くなると、判断を誤る確率が増える代わりに、サンプルサイズが小さくて済むわけです。
-:::
-
-### サンプルサイズ設計によるβエラーの制御
-
-::::::::::::::::::::::::::::::::: dialogue
-::: voice-daughter
-私「紙ナプキンに描いてくれた表自体はわかるんだけどね。そこからαとかβとか確率とかいわれてもなあ。ついていけないな」
-:::
-
-::: voice-father
-お父さん「まずはαエラーとβエラーが臨床試験のどんな結果を表しているか考えると、イメージしやすいかもね。まず、αエラーとβエラーの意味から確認させて」
-:::
-
-- αエラー: 「効果がない」という確率モデル上で計算されたエラーの確率
-- βエラー: 「効果がある」という確率モデル上で計算されたエラーの確率
-
-::: voice-father
-お父さん「JCOG9502のように試験治療の有効性を検証する試験では、αエラーは標準治療と差がないかそれより劣る治療方法が普及してしまうことにつながる。いわば、”αエラー=消費者リスク”といえる。一方で、βエラーは試験治療が本当は有効なのに、開発中止してしまうことを意味する。だから”βエラー=生産者リスク”といわれる。医師の視点で気になるのは、やっぱりαエラーの方だよね」
+お父さん「ん？そりゃ当たってるよ。仮定した確率モデルが正しければね」
 :::
 
 ::: voice-daughter
-私「理屈じゃなくて、数字の実感がないのよ。判断ミスをする確率なんて低い方がいいに決まってるよね。でもどのくらいの確率にするものなの？」
+私「ふーん。シミュレーションもできる？」
 :::
 
 ::: voice-father
-お父さん「JCOG9502の論文読んだんでしょ。どう書いてあった？」
+お父さん「ああ、そういうこと。じゃあ続けてハザード比の95%信頼区間の被覆確率（coverage）を出してみようか。Rでね」
 :::
 
 ::: voice-daughter
-私「はいはいみますみます。”The amended sample size was 250, with one-sided alpha error of 0.1 and beta error of 0.2”って書いてある。片側検定で、αエラー0.1、βエラー0.2ってことね。そうすると、予定変更後のサンプルサイズは250人になったんだ」
+私「coverage？つまり、本当に100回に95回当たるかどうか？」
 :::
 
 ::: voice-father
-お父さん「そういうこと。βエラーは0.1か0.2が一般的かな。米国臨床試験グループSWOGの統計家たちは、教科書で以下のように述べている（Green, et al. 2013）。
-
-> 新しい治療法が見つかることはさほど多くないため、我々は原則として90%の検出力を推奨している
-
-検出力90%はβエラー0.1のことね」
+お父さん「そう。信頼区間が真値を当てる頻度を、シミュレーションデータで数えるんだ。頻度論の約束が、どの程度守られているかを確かめる仮想実験だよ。前提条件を整理しよう。2群比較の生存曲線を比べたいんだよね」
 :::
 
 ::: voice-daughter
-私「私の研究でもサンプルサイズは250人でよくない？」
+私「ストーマあり群とストーマなし群ね」
 :::
 
 ::: voice-father
-お父さん「雑だけどいい線いってる。大体それくらいになりそうだけど、サンプルサイズの計算結果を表にしてあげるから、ちゃんとそれをみて決めよう。いろんな状況があり得るけど、両側αエラー0.05で、βエラーは0.2（検出力0.8）と0.1（検出力0.9）という設定がもっともよく用いられるから、そのときのサンプルサイズを紹介するね。同じ人数の2つの群を比較することを想定しているから、群ごとの人数はサンプルサイズの半分になる」
-:::
-
-::: panel-tabset
-### 検出力80%
-
-表1. 2群の生存曲線を比較するためのサンプルサイズ\
-両側 α=0.05, 1−β=0.8\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
-|$\pi_2$|$\pi_1=0.1$|  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
-|------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| 0.15 |    964 |    — |    — |    — |    — |    — |    — |    — |
-| 0.20 |    296 |    — |    — |    — |    — |    — |    — |    — |
-| 0.25 |    156 | 1826 |    — |    — |    — |    — |    — |    — |
-| 0.30 |    102 |  506 |    — |    — |    — |    — |    — |    — |
-| 0.35 |     74 |  246 | 2486 |    — |    — |    — |    — |    — |
-| 0.40 |     58 |  152 |  658 |    — |    — |    — |    — |    — |
-| 0.45 |     48 |  104 |  308 | 2894 |    — |    — |    — |    — |
-| 0.50 |     42 |   78 |  182 |  744 |    — |    — |    — |    — |
-| 0.55 |     36 |   62 |  122 |  340 | 3034 |    — |    — |    — |
-| 0.60 |     32 |   52 |   90 |  198 |  764 |    — |    — |    — |
-| 0.65 |     28 |   42 |   70 |  130 |  342 | 2900 |    — |    — |
-| 0.70 |     26 |   38 |   54 |   92 |  194 |  712 |    — |    — |
-| 0.75 |     24 |   34 |   38 |   70 |  124 |  312 | 2492 |    — |
-| 0.80 |     22 |   30 |   38 |   56 |   86 |  174 |  592 |    — |
-| 0.85 |     22 |   26 |   34 |   46 |   66 |  110 |  254 | 1818 |
-| 0.90 |     20 |   26 |   30 |   38 |   50 |  136 |  136 |  414 |
-
-### 検出力90%
-
-表1. 2群の生存曲線を比較するためのサンプルサイズ\
-両側 α=0.05, 1−β=0.9\
-※ 数値は「2群合計のサンプルサイズ」（割付け比1:1）
-
-|$\pi_2$|$\pi_1=0.1$|  0.2 |  0.3 |  0.4 |  0.5 |  0.6 |  0.7 |  0.8 |
-|------|-------:|-----:|-----:|-----:|-----:|-----:|-----:|-----:|
-| 0.15 |   1290 |    — |    — |    — |    — |    — |    — |    — |
-| 0.20 |    396 |    — |    — |    — |    — |    — |    — |    — |
-| 0.25 |    208 | 2444 |    — |    — |    — |    — |    — |    — |
-| 0.30 |    136 |  676 |    — |    — |    — |    — |    — |    — |
-| 0.35 |    100 |  330 | 3330 |    — |    — |    — |    — |    — |
-| 0.40 |     78 |  202 |  880 |    — |    — |    — |    — |    — |
-| 0.45 |     64 |  138 |  412 | 3876 |    — |    — |    — |    — |
-| 0.50 |     54 |  104 |  242 |  996 |    — |    — |    — |    — |
-| 0.55 |     46 |   82 |  162 |  454 | 4060 |    — |    — |    — |
-| 0.60 |     42 |   68 |  120 |  264 | 1022 |    — |    — |    — |
-| 0.65 |     38 |   56 |   90 |  172 |  456 | 3880 |    — |    — |
-| 0.70 |     34 |   48 |   72 |  124 |  258 |  952 |    — |    — |
-| 0.75 |     32 |   42 |   60 |   92 |  166 |  416 | 3336 |    — |
-| 0.80 |     30 |   40 |   52 |   74 |  116 |  232 |  796 |    — |
-| 0.85 |     28 |   34 |   46 |   60 |   88 |  146 |  338 | 2436 |
-| 0.90 |     26 |   32 |   38 |   50 |   68 |  100 |  180 |  548 |
-:::
-
-::: voice-father
-お父さん「ストーマ造設あり・なしの2群があるとして、復職率はそれぞれどれくらいになりそうなの？仮の値でいいよ」
+お父さん「そうだね、ストーマあり群とストーマなし群のOSを比べよう。真のハザード比は1.5、つまりストーマあり群の方が寿命が1.5倍短い。ハザード比の95%信頼区間は、1000回シミュレーションしたら、1.5を約950回は含んでいるはず」
 :::
 
 ::: voice-daughter
-私「むずいな。どのくらいなんだろう。なにも不利なことがないなら、手術した後、1年以内に80%は復職してほしいかな。ストーマがあると20%から30%くらいは復職率が下がるんじゃない？調査してみないとわかんないけどね」
+私「ん？私、調査は1回しかしないつもりだけど」
 :::
 
 ::: voice-father
-お父さん「なるほど。もし復職状況を生存時間データとして解析するとしたらね。復職できた時点でイベントが発生し、それ以外の患者は打ち切りになる。表1と2は、2群の生存確率を比較するためのもので、生存確率を$\pi_1$と$\pi_2$と表記している。$\pi_1$と$\pi_2$は、がんサバイバー研究でいうとグループごとの”非復職確率”に対応する。つまり復職率が80%と60%だったら、$\pi_1=0.2$と$\pi_2=0.4$になる。この数字を使うってことは、暗黙の裡に、1年間追跡することを想定してるんだけどね。表2の対応箇所をみてみてよ」
+お父さん「あのね、聞いて。統計家が話している**確率モデル**は、実際にこれから行われる研究そのものじゃないと思った方がいい。たとえるなら"こういう集団から、こういうルールでデータを発生させて"と別世界に指示を出す手紙なんだ。現実と別世界はデータとRとシミュレーションでつながっている。その手紙に書かれたルールに従って別世界の誰かが研究を1000回繰り返す」
 :::
 
 ::: voice-daughter
-私「202人って書いてある。これが調査しないといけない人数ってこと？」
+私「ふーん。そこで当たりがでた割合がcoverageね」
 :::
 
 ::: voice-father
-お父さん「そういうこと」
+お父さん「そう。以前JCOG9502の話をしたとき、"p値が0.05だったら100回に5回は正しい"っていってたよ。自分の経験だと違って見えるものだけど同じこと。それでね、生存曲線の形は指数分布で決める。途中で追跡できなかった患者は打ち切り扱いになるけど、それも指数分布で発生させる。この設定だと、Cox回帰の仮定はすべて正しい。だから理論的にcoverageは95%になるはず」
 :::
 
 ::: voice-daughter
-私「もし、202人の全員が1年間で追跡できなかったらどうするの？半年までしか調査できなかったとか」
-:::
-
-::: voice-father
-お父さん「この表のサンプルサイズは、術後1年間100%追跡できるという前提で計算している。サンプルサイズの計算では、本来、それぞれの群のハザード比や生存期間中央値から必要なイベント数を求め、それを観察するために必要な期間を考慮したうえで人数を決める。結構ややこしいでしょ。今回は、2パターンの検出力だけみればいいように状況を単純化している。さっき検出力について説明したじゃない、対立仮説の下で有意になる確率ね。表2は、検出力90%の検定を行うために必要なサンプルサイズで、表1はそれを検出力80%に緩めたときのもの。表1をみると、検出力80%でよければ、152人に調査すればいいみたいだね」
-:::
-
-::: voice-daughter
-私「ふむ。この人数も、確率モデルで計算したの？」
-:::
-
-::: voice-father
-お父さん「もちろん、この書籍の著者が、別世界の誰かに手紙を出してね」
-:::
-
-::: voice-daughter
-私「ふむふむ。まだよくわかんないな。JCOG9502では、2本の生存曲線を比べてたでしょ」
-:::
-
-::: voice-father
-お父さん「うん」
-:::
-
-::: voice-daughter
-私「いま考えてる統計解析って、ストーマ造設あり・なしと復職状況の関係を調べてたんだよね。以前に聞いた話だと、2値データだとロジスティック回帰、生存時間データだとCox回帰を使うんじゃなかったっけ。生存曲線とCox回帰は別の統計手法じゃない？」
-:::
-
-::: voice-father
-お父さん「正確にいうとね、生存曲線を比較するためのp値はいくつかの統計手法で計算できる。よく使うのはログランク検定とCox回帰のふたつで、表1と2は、ほんとはログランク検定用なんだけど。Cox回帰を使ったとしても、ストーマ造設あり・なし以外の因子がなければ、ログランク検定とほとんど同じ結果になる。特にサンプルサイズが大きければね」
-:::
-
-::: voice-daughter
-私「お父さん、あとね。表1と2に割付け比1:1って書いてあるでしょ。これって2群の人数が同じってことだよね」
-:::
-
-::: voice-father
-お父さん「そうだよ、たいていの臨床試験の割付け比は1:1だからね」
-:::
-
-::: voice-daughter
-私「でもストーマ保有者って、非保有者より少ないと思うんだけど。半数くらいかな」
-:::
-
-::: voice-father
-お父さん「調査や観察研究だと、群ごとの人数は同じにならないよね。さっきは、書籍（Machin, et al. 2022）の表を利用させてもらったんだけど、設定が複雑になると、付録のソフトウェアやRを利用することになる。
-**powerSurvEpi**パッケージで、あの表とほぼ同じ計算ができるはず。割付け比を、1:1から2:1、4:1に変えて、ストーマ保有者が33%、20%のときの計算をしてみよう」
+私「じゃあ、その通りになるかどうか、Rで確かめればいいんだね」
 :::
 :::::::::::::::::::::::::::::::::
 
 
-::: {.callout-note appearance="simple"  collapse="true" title="Rパッケージを用いたサンプルサイズ設計のコードはこちら"}
+::: {.callout-note appearance="simple"  title="coxph()を用いた95%信頼区間のシミュレーション"}
+ハザード比を推定する方法はいくつかありますが、もっともポピュラーなのは**survival**パッケージの`coxph()`です。以前のデモで、`generate_data(hr1, hr2)`を用いて、ストーマの有無やOSのデータを生成しました。今回は同じデータにCox回帰を当てはめ、ストーマあり群とストーマなし群のハザード比を計算してみます。この関数では、死亡ハザード比の真値はhr2という引数で指定できます。
+:::
+
+::: {.callout-note appearance="simple"  collapse="true" title="generate_data()のコードはこちら（データ生成に使用）"}
 ```{r warning=FALSE}
-# install.packages("powerSurvEpi") #インストールが必要なら実行
-library(powerSurvEpi)
+generate_data <- function(n=200, hr1, hr2) {
+  stoma <- rbinom(n, size = 1, prob = 0.4)
+  sex <- rbinom(n, size = 1, prob = 0.5)
+  age <- rnorm(n, mean = 65 + 3 * stoma, sd = 8)
+  hazard_relapse   <- ifelse(stoma == 1, hr1*0.10, 0.10) # 再発のハザード（大きいほど早く起こる）
+  hazard_death     <- ifelse(stoma == 1, hr2*0.10, 0.10) # 死亡のハザード（大きいほど早く起こる）
+  hazard_censoring <- 0.05                               # 打ち切りハザード（群に依存しない）
+  
+  t_relapse   <- rexp(n, rate = hazard_relapse)   # 再発までの潜在時間
+  t_death     <- rexp(n, rate = hazard_death)     # 死亡までの潜在時間
+  t_censoring <- rexp(n, rate = hazard_censoring) # 打ち切りまでの潜在時間
+  
+  ## --- 全生存期間（OS） ----------------------------------------
+  time_os   <- pmin(t_death, t_censoring)
+  status_os <- as.integer(t_death <= t_censoring)  # 1 = 死亡, 0 = 打ち切り
+  
+  ## --- 無再発存期間（RFS） -------------------------------------
+  time_rfs <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_rfs <- integer(n)
+  status_rfs[time_rfs == t_relapse & time_rfs < t_censoring] <- 1 # 再発
+  status_rfs[time_rfs == t_death & time_rfs < t_censoring] <- 1   # 死亡
+  
+  ## --- 累積再発率（CIR） + 競合リスク --------------------------
+  time_cir <- pmin(t_relapse, t_death, t_censoring)
+  
+  status_cir <- integer(n)
+  status_cir[time_cir == t_relapse & time_cir < t_censoring] <- 1 # イベント1: 再発
+  status_cir[time_cir == t_death & time_cir < t_censoring] <- 2   # イベント2: 競合リスクとしての死亡
+  
+  ## --- データフレームにまとめる --------------------------------
+  dat <- data.frame(
+    id         = 1:n,
+    sex        = factor(sex, levels = c(0, 1), labels = c("WOMAN", "MAN")),
+    age        = age,
+    stoma      = factor(stoma, levels = c(0, 1),
+                        labels = c("WITHOUT STOMA", "WITH STOMA")),
+    time_os    = time_os,
+    status_os  = status_os,
+    time_rfs   = time_rfs,
+    status_rfs = status_rfs,
+    time_cir   = time_cir,
+    status_cir = status_cir
+  )
+}
+```
+:::
 
-ssizeCT.default(
-  power = 0.9,
-  k     = 1,
-  pE    = 0.6,                     # ストーマあり群の復職率
-  pC    = 0.8,                     # ストーマなし群の復職率
-  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
-  alpha = 0.05
-)
-ssizeCT.default(
-  power = 0.9,
-  k     = 0.5,
-  pE    = 0.6,                     # ストーマあり群の復職率
-  pC    = 0.8,                     # ストーマなし群の復職率
-  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
-  alpha = 0.05
-)
-ssizeCT.default(
-  power = 0.9,
-  k     = 0.25,
-  pE    = 0.6,                     # ストーマあり群の復職率
-  pC    = 0.8,                     # ストーマなし群の復職率
-  RR    = log(1-0.8)/log(1-0.6),   # 復職率からハザード比を計算
-  alpha = 0.05
-)
+::: {.callout-note appearance="simple"  collapse="true" title="calculate_coverage()のコードはこちら（generate_data()とcoxph()を呼んでシミュレーションを実行）"}
+```{r warning=FALSE}
+calculate_coverage <- function(model=c("coxph","finegray"), n, hr1, hr2, hr_true) {
+  set.seed(46)
+  replications=1000
+  covered <- numeric(replications)
+
+  for (r in seq_len(replications)) {
+    dat <- generate_data(n, hr1, hr2)
+    if (identical(model, "coxph")) {
+      fit <- coxph(Surv(time_os, status_os) ~ stoma, data = dat)
+    } else if (identical(model, "finegray")) {
+      dat$fstatus_cir <- factor(dat$status_cir,
+                                levels = 0:2,
+                                labels = c("censor",
+                                           "relapse",
+                                           "death"))
+      fgdat <- finegray(Surv(time_cir, fstatus_cir) ~ ., data=dat)
+      fit <- coxph(Surv(fgstart, fgstop, fgstatus) ~ stoma, weight=fgwt, cluster=id, data=fgdat)
+    }
+    confidence_interval <- confint(fit)
+    covered[r] <- as.integer(confidence_interval[1] <= log(hr_true) && log(hr_true) <= confidence_interval[2])
+  }
+  coverage <- mean(covered)
+  return(coverage)
+}
+```
+:::
+
+::: {.callout-note appearance="simple"  collapse="true" title="calculate_coverage()を実行するRコードと結果はこちら"}
+```{r warning=FALSE}
+# install.packages("survival") #インストールが必要なら実行
+library(survival)
+coverage_200 <- calculate_coverage(model="coxph", n=200, hr1=2, hr2=1.5, hr_true=1.5)
+print(coverage_200)
 ```
 :::
 
 ::::::::::::::::::::::::::::::::: dialogue
-::: voice-father
-お父さん「割付け比$K$は$K:1$を意味している。$K=1$（1:1）、$K=0.5$（2:1）、$K=0.25$（4:1）だと、必要サンプルサイズ（$nE+nC$）は100+100人から19+118人、41+161人に変化するみたいだね」
-:::
-
 ::: voice-daughter
-私「えー、$K$ってストーマありの割合だよね、そんなのまだわからないもの。思ったより人数が必要かもってことだよね。調査する施設を増やすかどうか考えないと」
+私「だいたいcoverageが95%になるっていうのは確認した。でも結局、95%信頼区間ってどう理解すればいいの？」
 :::
 
 ::: voice-father
-お父さん「気持ちはわかるよ。頻度論の立場で厳密に研究をデザインすると、だいたい最初は"そんなに集められないよ"って顔になるからね」
+お父さん「教科書的にいうとね。同じようなデータを何度も集めて、毎回95%信頼区間を作ったとき、“真の値を含む区間”の割合が0.95になるように設計された指標なんだ。これを"in the long run"の性能って言ったりする。でも、概念的に理解するよりも、シミュレーションを行った方がわかりやすいと思って」
 :::
 
 ::: voice-daughter
-私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーション1000回のうち失敗しちゃった調査が、私の調査だったらきっついもん。ひとつの調査を繰り返したときのことをイメージできると、統計的な意味のある研究ってなにかが見えてくるね」
+私「いやわかりにくいだろ。1回の研究で"この区間が当たっている確率が95%"って意味じゃないんだね」
+:::
+
+::: voice-father
+お父さん「そうだね」
+:::
+
+::: voice-daughter
+私「じゃあ、人数が100人だったどうなるの？人数が減ったら当たりにくくはならないの？」
+:::
+
+::: voice-father
+お父さん「設計上は当たりにくくなったりはしないよ。95%信頼区間のcoverageはサンプルサイズによらず95%になるように作ってある。n=100、200、400、800のシミュレーション結果をみてみようか」
 :::
 :::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  collapse="true" title="calculate_coverage()を実行するRコードと結果はこちら"}
+```{r warning=FALSE}
+coverage_100 <- calculate_coverage(model="coxph", n=100, hr1=2, hr2=1.5, hr_true=1.5)
+coverage_400 <- calculate_coverage(model="coxph", n=400, hr1=2, hr2=1.5, hr_true=1.5)
+coverage_800 <- calculate_coverage(model="coxph", n=800, hr1=2, hr2=1.5, hr_true=1.5)
+print(coverage_100)
+print(coverage_200)
+print(coverage_400)
+print(coverage_800)
+```
+:::
+
+
+### 信頼区間アプローチによるサンプルサイズ設計
+
+::::::::::::::::::::::::::::::::: dialogue
+::: voice-daughter
+私「ほんとだ、だいたい95%。じゃあ調査人数は何人でもいいってことだ」
+:::
+
+::: voice-father
+お父さん「ん？どういう意味？」
+:::
+
+::: voice-daughter
+私「がんサバイバー何人に調査票を送るかってこと。だって信頼区間の性能は人数によらないんでしょ」
+:::
+
+::: voice-father
+お父さん「あ、ごめん、誤解があったね。サンプルサイズが小さくなると、coverageは同じでも、信頼区間幅が広くなる。つまり、同じ95%でも、どれくらい曖昧な推定値で我慢しないといけないかが変わるんだ。今のところ、何人に調査するつもりだった？」
+:::
+
+::: voice-daughter
+私「100人から調査票戻ってきたら上出来かなって思ってるけど」
+:::
+
+::: voice-father
+お父さん「やっぱり必要サンプルサイズは計算してなかったか。がんを手術した後の復職率を推定したいってことでいいの？それなら100人でギリギリだと思う」
+:::
+
+::: voice-daughter
+私「いや？前にお父さんにPECOを教えてもらったよね。あれから上司と相談して、ストーマを造設した患者の復職状況を造設しなかった患者と比べることにしたの」
+:::
+
+::: voice-father
+お父さん「そうなんだ。そうすると計算が違ってくる。100人だと足りないはず」
+:::
+
+::: voice-daughter
+私「へ？なんでそんなことわかるのよ。100人に協力してもらうのってたいへんなのよ」
+:::
+
+::: voice-father
+お父さん「どれだけサンプルサイズが必要なのかについて、統計学的な根拠に基づいて見積もる方法があるんだよ。この表をみてみて。ある書籍から借りてきたものなんだけど（Machin, et al. 2022）」
+:::
+
+::: panel-tabset
+### 割合0.01～0.15
+
+表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
+
+| 割合 $\pi$ | 0.05 | 0.10 | 0.15 | 0.20 |
+|--------|-----:|-----:|-----:|-----:|
+| 0.01   |  108 |   43 |   25 |   17 |
+| 0.02   |  152 |   52 |   29 |   19 |
+| 0.03   |  201 |   61 |   33 |   21 |
+| 0.04   |  252 |   72 |   37 |   23 |
+| 0.05   |  304 |   83 |   41 |   25 |
+| 0.06   |  356 |   95 |   46 |   28 |
+| 0.07   |  407 |  107 |   50 |   30 |
+| 0.08   |  458 |  118 |   55 |   32 |
+| 0.09   |  508 |  130 |   60 |   35 |
+| 0.10   |  554 |  139 |   62 |   35 |
+| 0.11   |  604 |  153 |   69 |   40 |
+| 0.12   |  651 |  164 |   74 |   42 |
+| 0.13   |  696 |  175 |   78 |   44 |
+| 0.14   |  741 |  186 |   83 |   47 |
+| 0.15   |  784 |  196 |   87 |   49 |
+
+### 割合0.16～0.50
+
+表1. 割合の推定において指定した 95%信頼区間幅のため必要なサンプルサイズ
+
+| 割合 $\pi$ | 0.05 | 0.10 | 0.15 | 0.20 |
+|--------|-----:|-----:|-----:|-----:|
+| 0.16   |  826 |  206 |   92 |   51 |
+| 0.17   |  867 |  216 |   96 |   54 |
+| 0.18   |  907 |  226 |  100 |   56 |
+| 0.19   |  945 |  236 |  104 |   58 |
+| 0.20   |  982 |  245 |  108 |   60 |
+| 0.25   | 1150 |  286 |  126 |   70 |
+| 0.30   | 1288 |  320 |  141 |   78 |
+| 0.35   | 1395 |  347 |  152 |   84 |
+| 0.40   | 1472 |  366 |  161 |   89 |
+| 0.45   | 1518 |  377 |  166 |   92 |
+| 0.50   | 1533 |  381 |  167 |   93 |
+:::
+
+::: voice-father
+お父さん「たとえばなんだけどね。復職率を調べたいとするでしょ。そうすると復職率をどれくらい精確に推定できたかを表す指標が、95%信頼区間だよね。仮に復職率が50%だったとしてみよう。そうすると、50%±10%程度の推定精度がほしいよね。ここでいう±の後の数字が、95%信頼区間の幅になるんだ」
+:::
+
+::: voice-daughter
+私「ああ、”50%（95%CI 40～60%）”みたいな感じで論文に書くことになるわけだ。40〜60%の場合、95%信頼区間幅は20%ってことね」
+:::
+
+::: voice-father
+お父さん「そういうこと。表では復職率を$\pi$という変数で表しているんだけど、”$\pi=0.5$”と”信頼区間幅0.2”に対応する数字をみて。93って書いてあるでしょ。これが必要サンプルサイズ」
+:::
+
+::: voice-daughter
+私「どうだろう。復職率ってもっと高くない？手術したときの年齢にもよるけど、たとえば患者さんが50歳前後だったら、80%はいってほしいなあ」
+:::
+
+::: voice-father
+お父さん「そうなんだ。そうすると復職率80%は非復職率20%と同じことだから、”$\pi=0.2$”と”信頼区間幅0.2”のところをみればいい。サンプルサイズは60人」
+:::
+
+::: voice-daughter
+私「100人で足りてるじゃん」
+:::
+
+::: voice-father
+お父さん「いやいやいや、これは復職率の信頼区間からサンプルサイズを計算したからこうなったんだ。"信頼区間アプローチ"といって、主に探索的研究で使うものなんだよ。別の計算の仕方もある。ストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究なら、"仮説検定アプローチ"といって、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+:::
+
+::: voice-daughter
+私「そっか、だいたいわかった。私、午後から出かけるから。また今度教えてよ、じゃあね」
+:::
+:::::::::::::::::::::::::::::::::
+
+::: {.callout-note appearance="simple"  title="サンプルサイズ設計の2つのアプローチ"}
+研究計画を立てるときには、サンプルサイズを見積もる必要があります。サンプルサイズの計算は大まかにいえば2種類あって、信頼区間アプローチ（たとえば表1）と仮説検定アプローチ（次回）を用いることができます。
+
+信頼区間アプローチは、調査や探索的研究で用いられます。このアプローチによって割合を推定するために必要なサンプルサイズを求めるとき、次の数値を設定する必要があります。
+
+-   割合の真値（復職率など）
+-   信頼区間幅
+
+もうひとつの仮説検定アプローチは、臨床試験や仮説検証型の研究に適しています。このアプローチでは、以下の3つの要素が最低でも必要です。
+
+-   有意水準（通常5%）
+-   検出力（通常80～90%）
+-   検出したい効果サイズ（2群間の生存確率の差やハザード比など）
+
+サンプルサイズ設計は、βエラーを制御するという意味で、p値と対になる統計手法といえます。
+:::
+
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+
+臨床検査の正常範囲の意味として正しいのはどれでしょうか。
+
+1.  ある集団からのランダムサンプルにおいて検査値の平均±1.96×標準偏差
+2.  健常人集団における検査値の95%が含まれる範囲
+3.  健常人集団における検査値の平均±1.96×標準誤差
+4.  ある集団からのランダムサンプルにおいて検査値の95%が含まれる範囲
+
+:::
+
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
+-   **正解は2です**
+
+標準偏差（SD）と標準誤差（SE）の区別が重要です。前者は「検査値自体が個人間でどのくらいばらつくか」を、後者は「平均の推定がどのくらい精確か」を表しています。そして、「平均±1.96×標準偏差」は、正規分布における「95%が含まれる範囲」に相当しています。
+
+なお、似て非なる範囲に「平均±1.96×標準誤差」があります。これは「仮想的反復の下で真の平均を95%の割合で包む区間」、すなわち頻度論統計学でいう95%信頼区間に対応します。
+:::
 
 ### 文献
 
@@ -480,12 +504,17 @@ ssizeCT.default(
 
 - Sasako M, Sano T, Yamamoto S, Sairenji M, Arai K, Kinoshita T, Nashimoto A, Hiratsuka M, Japan Clinical Oncology Group (JCOG9502). Left thoracoabdominal approach versus abdominal-transhiatal approach for gastric cancer of the cardia or subcardia: a randomised controlled trial. Lancet Oncol 2006;7(8):644-51
 
-### This concludes the Frequentist Thinking series. If you’d like to keep reading over your next cup of coffee, the following episodes are waiting:
+- [Green J, Benedetti J, Smith A, Crowley J. 米国SWOGに学ぶがん臨床試験の実践 第2版（原書第3版）. 東京: 医学書院; 2013](https://www.igaku-shoin.co.jp/book/detail/84805)
 
-- [Silent Confusions Hidden in Percentages](effects-1.html)
-- [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.html)
-- [Collapsibility of Effect Measures in Marginal and Stratified Tables](effects-3.html)
-- [Risk Ratios and Odds Ratios: When Approximation Works](effects-4.html)
-- [From Risk and Rate to Survival and Hazard](effects-5.html)
-- [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example](effects-6.html)
+### エピソード、用語集、Rスクリプト
 
+- [Reading a Paper over a Cup of Coffee](frequentist-1.html)
+- [P-Value Explanations That Seem Plausible at First Glance]
+- [Beyond 0.05: Interpreting P-Values in a Clinical Trial]
+- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks]
+- [Understanding Confidence Intervals via Hypothetical Replications in R]
+- [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size]
+
+- [Statistical Terms in Plain Language](glossary.html)
+
+- [frequentist.R](../from-coffee-chat-to-r/frequentist.R)
