--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -285,7 +285,7 @@ Keywords: bias, observational study, hypothesis/outcome/population, simulation, 
 :::::::::::::::::::::::::::::::::
 
 - 時間変数
-- イベント変数
+- イベント変数とと
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-father
@@ -485,19 +485,16 @@ cifplot(Event(time_cir, status_cir) ~ stoma,
 ::::::::::::::::::::::::::::::::: 
 
 ::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+CDISC ADaM ADTTE（Analysis Data Model for Time-to-Event Endpoints）は、製薬企業が行う臨床試験データの標準規格です。この規格では、打ち切りにはCNSRという変数名の変数を用いることになっています。打ち切りを表すコーディングのは、次のうちどちらでしょう。
 
-Kaplan-Meier法による生存曲線の推定が妥当な状況として正しいのは、次のうちどれでしょうか。
-
-1.  生存時間が正規分布するとき
-2.  打ち切りの理由が疾患の悪化によらないとき
-3.  2群の打ち切り確率に統計学的な有意差がなかったとき
-4.  試験治療群とコントロール群の間で比例ハザード性が成り立つとき
+1. CNSR=0
+2. CNSR=1
 :::
 
 ::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 - **正解は2です**
 
-Kaplan-Meier法では、生存時間が正規分布したり、比例ハザードが成り立ったりする必要はありません（これはそれぞれ*t*検定とCox回帰の前提条件ですね）。疾患の悪化に伴って、試験の途中で患者が追跡できなくなると、推定された生存曲線にバイアスが生じてしまいます。2群の生存曲線を比べるとき、それぞれの群の打ち切り確率を比較することがあります。有意差があればバイアスがあるといえますが、たとえばサンプルサイズが小さいときは有意差が出ませんから、Kaplan-Meier法が妥当という証拠にはなりません。逆にいうと、打ち切りがランダムに起きていることが、Kaplan-Meier法の基本的な前提条件です。
+CDISC ADaM ADTTEでは、1がTRUEを表しています。`Event()`や`Surv()`など多くの統計パッケージのデフォルトでは、イベント=1、打ち切り=0というコーディングを想定しています。CNSRをそのまま用いることはできません。
 :::
 
 ### エピソードとRスクリプト
