--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -160,7 +160,7 @@ Keywords: bias, effect measure
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「この大福うまいな。やっぱお茶よりコーヒーだわ。お父さんの話を聞いてて、国試の勉強してたときのことを思い出した。保健統計だったか、疫学だったかの問題で、オッズ比の計算問題を解いたことがあったなあ。リスク比とオッズ比って結局同じ使い方をするの？みたいな」
+私「お父さんの話を聞いててね、国試の勉強してたときのことを思い出したよ。保健統計だったか、疫学だったかの問題で、オッズ比の計算問題を解いたことがあったなあ。リスク比とオッズ比って結局同じ使い方をするの？みたいな」
 :::
 
 ::: voice-father
