--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -324,11 +324,19 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 ::: 
 
 ::: voice-father
-お父さん「それはリスク差のモデルだね。このモデルが悪いわけじゃないんだけど、ロジット関数が選ばれた理由はちゃんとある。データを解析するとき、人工的に変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+お父さん「それはリスク差のモデルだね。無変換のモデルが悪いわけじゃないんだけど、ロジット関数が選ばれた理由はちゃんとある。この話はちょっと難しいかもしれない。たとえるならね、ロジスティック回帰はルービックキューブのように構造が安定しているんだ」
 ::: 
 
 ::: voice-daughter
-私「ふんふん」
+私「どういう意味？」
+::: 
+
+::: voice-father
+お父さん「操作を加えても構造が維持されるっていうこと。どんなに面を回しても、ルービックキューブは解くと絵の向きが揃うように作られてる。データを解析するとき、人工的に変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+::: 
+
+::: voice-daughter
+私「それはよくやることだよね」
 ::: 
 
 ::: voice-father
@@ -350,7 +358,7 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 :::
 
 ::: voice-father
-お父さん「この"死亡と生存を入れ替える"という操作が群作用のこと。ここで問題にしているのはリンク関数$g$だったよね。確率$\pi$を、リンク関数で別のスケール$g(\pi)$に変換したとする。このとき、死亡と生存を入れ替えても、値が反転するだけで構造が維持されるには$g$はどんな性質を持つべき？」
+お父さん「この"死亡と生存を入れ替える"という操作が群作用に相当する。ここで問題にしているのはリンク関数$g$だったよね。確率$\pi$を、リンク関数で別のスケール$g(\pi)$に変換したとする。このとき、死亡と生存を入れ替えても、値が反転するだけで構造が維持されるには$g$はどんな性質を持つべき？」
 :::
 
 ::: voice-daughter
