--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -160,7 +160,7 @@ Keywords: bias, observational study, hypothesis/outcome/population, simulation, 
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「今、話しかけていいかな、お父さん。がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？あ、この前のRも参考になったよ、調査結果が想像できた」
+私「あれ、懐かしい。私が小学生の頃に買ったルービックキューブじゃない、そんなのやってるの。時間があるならちょっといい？がんサバイバーの復職率を調査する話があったでしょ。患者さんに送る調査票をつくってみたんだけど、見てくれる？あ、この前のRも参考になったよ、調査結果が想像できた」
 :::
 
 ::: voice-father
