--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -184,7 +184,15 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 ::: 
 
 ::: voice-father
-お父さん「そう。でも、がんサバイバー調査は観察研究で、ランダム化されていない。JCOG9502と同じように考えたくても、"仮にストーマを造設しなかった場合のアウトカム"は存在しない。仮定の話だからね。だからこの観察研究では、観測できないアウトカムを、共変量や回帰モデルで予測するしかない。これはデータ上のアウトカムとは区別して、**潜在結果変数（potential outcome）**と呼ばれている。観測はできないけれど、医学的・論理的に定義できる"もうひとつの結果"というわけだね」
+お父さん「そう。でも、がんサバイバー調査は観察研究で、ランダム化されていない。JCOG9502と同じように考えたくても、"仮にストーマを造設しなかった場合のアウトカム"は実在しない。仮定の話だからね。だからこの観察研究では、観測できないアウトカムを、共変量や回帰モデルで予測するしかない。これはデータ上のアウトカムとは区別して、**潜在結果変数（potential outcome）**と呼ばれている。観測はできないけれど、医学的・論理的に定義できる"もうひとつの結果"というわけだね」
+::: 
+
+::: voice-daughter
+私「実在しないものを定義しても仕方ないじゃない」
+::: 
+
+::: voice-father
+お父さん「そうじゃない。どんな因果効果が知りたいかを定義して、それを推定するためにデータを集める。眼に見えるのは、ルービックキューブの一面に過ぎない。別の面にある潜在結果変数は観測できないんだ。でもランダムに回転させたルービックキューブがたくさん集まれば、面に描かれた絵が推定できる」
 ::: 
 
 ::: voice-daughter
