--- a/jp/truth-3.qmd
+++ b/jp/truth-3.qmd
@@ -210,10 +210,14 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 - [Reading a Paper over a Cup of Coffee](frequentist-1.html)
 - [P-Value Explanations That Seem Plausible at First Glance](frequentist-2.html)
 - [Beyond 0.05: Interpreting P-Values in a Clinical Trial](frequentist-3.html)
-- [Understanding Confidence Intervals via Hypothetical Replications in R](frequentist-4.html)
-- [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size](frequentist-5.html)
 
-**4. Effects and time — 効果は時間とともに**
+**4. Frequentist Experiments — 統計学の実証**
+
+- [R Demonstration of Bias in Kaplan-Meier Under Competing Risks](frequentist-4.html)
+- [Understanding Confidence Intervals via Hypothetical Replications in R](frequentist-5.html)
+- [Alpha, Beta, and Power: The Fundamental Probabilities Behind Sample Size](frequentist-6.html)
+
+**5. Effects and time — 効果は時間とともに**
 
 - [Silent Confusions Hidden in Percentages](effects-1.html)
 - [Who Is This Percentage About? Target Populations and Attributable Fractions](effects-2.html)
@@ -222,7 +226,7 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 - [From Risk and Rate to Survival and Hazard](effects-5.html)
 - [Distinguishing Time-Point, Time-Constant, and Time-Varying Effects: An R Example](effects-6.html)
 
-**5. Adjusting for bias — 回帰モデリングの風景**
+**6. Adjusting for bias — 回帰モデリングの風景**
 
 - [From Risk to Logistic Regression](logistic-regression-1.html)
 - [Logit: How a Transformation Shapes an Effect](logistic-regression-2.html)
@@ -230,7 +234,7 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 - [Why Logistic Regression Fails in Small Samples](logistic-regression-4.html)
 - [Simpson's paradox](logistic-regression-5.html)
 
-**6. Truth — 真実**
+**7. Truth — 真実**
 
 - [What Data Cannot Tell Us](truth-1.html)
 - [What Could Have Happened](truth-2.html)
