--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -368,18 +368,14 @@ print(risk_ratio2)
 ::: 
 
 ::: voice-father
-お父さん「Simpsonのパラドックスのポイントは3つの変数の相関関係なんだ」
+お父さん「Simpsonのパラドックスのポイントは、3つの変数の相関関係なんだ。2つの条件が揃うとSimpsonのパラドックスが起きる。正確にいうと、これは十分条件で必要条件じゃないんだけどね（田中2022）」
 ::: 
 
 - 第3の因子と曝露の間に相関がある
 - 第3の因子とアウトカムの間に相関がある
 
-::: voice-father
-お父さん「この2つの条件が揃うとSimpsonのパラドックスが起きる。正確にいうと、これは十分条件で必要条件じゃないんだけどね（田中2022）」
-::: 
-
 ::: voice-daughter
-私「曝露とアウトカムと第3の変数の関係性ねえ。2つの条件を確認する時間がほしいな。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か。確かにそうなる。交絡の話ってまあまあややこしいね」
+私「曝露とアウトカムと第3の変数の関係性ねえ。ちょっと確認させて。コーヒー摂取群とコーヒー非摂取群で、喫煙率が違う。さらに喫煙は膵がんリスクも上げる。そうすると層別したらオッズ比の値が変わった。ああ、もともとバイアスが入ってたんだから、調整して値が変わるのは当然か。確かにそうなる。交絡の話ってまあまあややこしいね」
 ::: 
 :::::::::::::::::::::::::::::::::
 
