--- a/jp/effects-4.qmd
+++ b/jp/effects-4.qmd
@@ -240,7 +240,7 @@ $\pi_1$と$\pi_2$のどちらかが0.2を超えると、リスク比とオッズ
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「この表、いっぱい数字があって見方が分からないな。対角のところがRR=OR=SOR=1になるのは、$\pi_1$と$\pi_2$が同じ値だからだよね」
+私「この表、いっぱい数字があって見方がわからないな。対角のところがRR=OR=SOR=1になるのは、$\pi_1$と$\pi_2$が同じ値だからだよね」
 :::
 
 ::: voice-father
