--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -332,7 +332,7 @@ $\left(\frac{\pi_2}{1-\pi_2}\right)\div\left(\frac{\pi_1}{1-\pi_1}\right)=\exp(\
 ::: 
 
 ::: voice-father
-お父さん「操作を加えても構造が維持されるっていうこと。どんなに面を回しても、ルービックキューブは解くと絵の向きが揃うように作られてる。データを解析するとき、人工的に変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
+お父さん「操作を加えても構造が維持されるっていうこと。どんな方向で、どんな順序で面を回しても、ルービックキューブは元に戻せる。解けば絵の向きもきちんと揃う。統計解析に話を戻すと、人工的にデータに変換を加えることがあるよね。たとえば死亡じゃなくて生存をアウトカムにしたり、LDLコレステロールの単位をmg/dLからmmol/Lに変えたり。これは共変量$X_i$のスケール変換のことだよ」
 ::: 
 
 ::: voice-daughter
