--- a/jp/truth-2.qmd
+++ b/jp/truth-2.qmd
@@ -192,7 +192,7 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 ::: 
 
 ::: voice-father
-お父さん「そうじゃない。どんな因果効果が知りたいかを定義して、それを推定するためにデータを集める。眼に見えるのは、ルービックキューブの一面に過ぎない。別の面にある潜在結果変数は観測できないんだ。でもランダムに回転させたルービックキューブがたくさん集まれば、面に描かれた絵が推定できる」
+お父さん「そうじゃない。どんな因果効果が知りたいかを定義して、それを推定するためにデータを集める。眼に見えるのは、6つあるルービックキューブの面の1つに過ぎない。別の面に潜在結果変数が描かれていたとしても観測できないんだ。でも同じ構造をもつルービックキューブをたくさん用意して、それぞれをランダムな向きで机の上に並べてごらん。どのキューブも一面しか見えないけれど、どんな絵が描かれているか推測することはできる。ランダム化臨床試験がやっているのはこれに似ている」
 ::: 
 
 ::: voice-daughter
@@ -243,7 +243,7 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 :::
 
 ::: voice-father
-お父さん「ふむ。もう少し説明が必要だね。ロジスティック回帰や層別解析を使っちゃいけないわけじゃない。ここで知ってほしかったのは、回帰係数やオッズ比を、因果関係を考えるための証拠として正しく解釈するためには、因果モデルが必要だってこと」
+お父さん「ふむ。もう少し説明が必要だね。ロジスティック回帰や層別解析を使っちゃいけないわけじゃない。それは方法なんだ。ルービックキューブの解き方みたいなもの。ルービックキューブの構造とは別物。ここで知ってほしかったのは、回帰係数やオッズ比を、因果関係を考えるための証拠として正しく解釈するためには、因果モデルが必要だってこと」
 :::
 
 ::: voice-daughter
@@ -267,7 +267,7 @@ Keywords: bias, causal model, confounding/collapsibility, hypothesis/outcome, la
 :::
 
 ::: voice-father
-お父さん「臨床試験や調査では、集団として得られたデータを統計的に解析することで法則性があるかどうかを調べている。そのための道具を用意するために、確率分布や回帰モデルという構造を考えているんだ。確率モデルと因果モデルは役割が違う」
+お父さん「臨床試験や調査は集団を対象にしているよね。集団を統計的に分析することで法則性を見出そうとしているんだ。そのための道具を用意するためのベースになっているのが、確率分布や回帰モデルだっていう話だったでしょ。確率モデルと因果モデルは役割が違う」
 :::
 
 ::: voice-daughter
