--- a/jp/frequentist-6.qmd
+++ b/jp/frequentist-6.qmd
@@ -470,7 +470,15 @@ ssizeCT.default(
 :::
 
 ::: voice-daughter
-私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーション1000回のうち失敗しちゃった調査が、私の調査だったらきっついもん。ひとつの調査を繰り返したときのことをイメージできると、統計的な意味のある研究ってなにかが見えてくるね」
+私「でも、サンプルサイズの意味がわかったから、しょうがないやるかって思ったよ。シミュレーション1000回のうち失敗しちゃった1回が、私の調査だったらきついもん」
+:::
+
+::: voice-father
+お父さん「自分で計算するとリアルでしょ」
+:::
+
+::: voice-daughter
+私「うん、かるく背筋が凍った」
 :::
 :::::::::::::::::::::::::::::::::
 
