--- a/jp/effects-5.qmd
+++ b/jp/effects-5.qmd
@@ -176,11 +176,11 @@ Keywords: effect measure, survival/competing-risk
 :::
 
 ::: voice-daughter
-私「生存曲線からある時点の生存確率を読み取ると、1-リスクになっているっていう意味ね。うんうん。そして、疫学の教科書に出てくる率（rate）が、生存時間解析のハザード（hazard）に対応しているっていうのもわかる。でも、気になるのは**ハザード比（hazard ratio）**なんだ。寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
+私「生存曲線からある時点の生存確率を読み取ると、1-リスクになっているっていう意味ね。うんうん。そして、疫学の教科書に出てくる**率（rate）**が、生存時間解析の**ハザード（hazard）**に対応しているっていうのもわかる。でも、気になるのは**ハザード比（hazard ratio）**なんだ。寄与割合とかリスク比とかって、時間とともに変化するっていうけど、ハザード比は変化しないんだっけ」
 :::
 
 ::: voice-father
-お父さん「変化しない。正確にいうと、生存曲線をみると変化している状況もあり得るんだけど、無理やり時間を通じてハザード比は一定と仮定して、計算してる」
+お父さん「変化しない。正確にいうと、生存曲線をみると変化している状況もあり得るんだけど、時間を通じてハザード比は一定と、無理やり仮定して計算してる」
 :::
 
 ::: voice-daughter
@@ -188,7 +188,7 @@ Keywords: effect measure, survival/competing-risk
 :::
 
 ::: voice-father
-お父さん「えーっと、リスク比が変化しないわけじゃなくて...。ちょっと紙ナプキンとペンをとってくれる？教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
+お父さん「えーっと、リスク比が変化しないわけじゃなくて...。リスクはハザードの時間積分だから、どちらか一方の比を固定したらもう一方は固定できなくて...。ちょっと紙ナプキンとペンをとってくれる？教科書通りに説明するとこうなるんだけど。まずはリスクとハザードからはじめるね」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -290,7 +290,15 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「そう？数学の難しさ自体は高校レベルなんだけど。きっと理解しにくいのは、数式がデータ上のどういう概念を結びつけているのかっていう部分なんだと思うんだけど。ハザードを具体的に考えるときは、生存時間中央値と結びつけるのが手だよ」
+お父さん「そう？数学の難しさというより、この等式が何と何を結びつけているかが、慣れないと読み取りにくいんだと思う」
+:::
+
+::: voice-daughter
+私「結びつきねえ。とりあえず生存曲線とハザードの関係式ってことまでかな、確実なのは」
+:::
+
+::: voice-father
+お父さん「まずはそこからだね。ハザードを具体的に考えるのは難しいけど、生存時間中央値と結びつけるのがよくやる手だよ。中央値（median）は生存曲線がちょうど50%まで落ちる時点のこと」
 :::
 :::::::::::::::::::::::::::::::::
 
